--- a/classes/BotField.cls
+++ b/classes/BotField.cls
@@ -1,17 +1,18 @@
 public class BotField {
-//Test Change Mar 26
+//Check Merge Changes
     @AuraEnabled public String name { get;set; }
     @AuraEnabled public String value { get;set; }
     @AuraEnabled public String linkURL { get;set; }
-    //ApexDoc
+    //Commit Changes
     public BotField(String name, String value) {
         this.name = name;
         this.value = value;
     }
+    //Test Comment
     public BotField(String name, String value, string linkURL) {
         this.name = name;
         this.value = value;
         this.linkURL = linkURL;
     }
-//EOLine
+//EOline
 }
